--- a/Notebooks/ML Project Gradient boosting.ipynb
+++ b/Notebooks/ML Project Gradient boosting.ipynb
@@ -1309,279 +1309,8 @@
    "source": [
     "# Score\n",
     "\n",
-    "# new parameters (mode)\n",
     "kf = StratifiedKFold(n_splits=10)\n",
     "avg_score(gb_model,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hist-Gradient Boosting "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 483,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.8798114222350197\n",
-      "Test: 0.8632849243769881\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Hist gradient boosting, testing some parameters\n",
-    "\n",
-    "hgb_model =  HistGradientBoostingClassifier(loss = 'auto', max_leaf_nodes = 20, min_samples_leaf = 7, max_bins = 200, learning_rate= 0.5, random_state= 10, max_iter=115)\n",
-    "\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(hgb_model,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 553,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.8771034961478126\n",
-      "Test: 0.8658439143711748\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Hist gradient boosting, testing some parameters\n",
-    "\n",
-    "hgb_model =  HistGradientBoostingClassifier(loss = 'auto', max_leaf_nodes = 20, min_samples_leaf = 7, max_bins = 200, learning_rate= 0.2, random_state= 10, max_iter=120)\n",
-    "\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(hgb_model,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 546,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'learning_rate': 0.2, 'max_iter': 100, 'random_state': 10}"
-      ]
-     },
-     "execution_count": 546,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Grid search \n",
-    "\n",
-    "hgb_model =  HistGradientBoostingClassifier(loss = 'auto', max_leaf_nodes = 20, min_samples_leaf = 7, max_bins = 200)\n",
-    "\n",
-    "parameters_HGB = {'learning_rate' : [0.1, 0.2, 0.3],\n",
-    "'max_iter' : [80, 100, 120]}\n",
-    "\n",
-    "clf_hgb = GridSearchCV(hgb_model, parameters_HGB, scoring = 'f1_micro', cv=10, refit = True)\n",
-    "clf_hgb.fit(X, Y)\n",
-    "clf_hgb.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 552,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'learning_rate': 0.2, 'max_iter': 120}"
-      ]
-     },
-     "execution_count": 552,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Grid search \n",
-    "\n",
-    "hgb_model =  HistGradientBoostingClassifier(loss = 'auto', max_leaf_nodes = 20, min_samples_leaf = 7, max_bins = 200)\n",
-    "\n",
-    "parameters_HGB = {'learning_rate' : [0.1, 0.2, 0.3],\n",
-    "'max_iter' : [80, 100, 120]}\n",
-    "\n",
-    "clf_hgb = GridSearchCV(hgb_model, parameters_HGB, scoring = 'f1_micro', cv=10, refit = True)\n",
-    "clf_hgb.fit(X, Y)\n",
-    "clf_hgb.best_params_"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Random Forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 425,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.9019218531246022\n",
-      "Test: 0.8605383734249713\n"
-     ]
-    }
-   ],
-   "source": [
-    "rf =  RandomForestClassifier(criterion = 'gini', min_samples_leaf = 2, min_samples_split = 7, n_estimators = 100)\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(rf,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Stacking Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 488,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estimators = [('GB', GradientBoostingClassifier(ccp_alpha= 0,\n",
-    "                                    criterion= 'friedman_mse',\n",
-    "                                    learning_rate= 0.5,\n",
-    "                                    loss= 'deviance',\n",
-    "                                    min_samples_leaf= 5,\n",
-    "                                    min_samples_split= 2,\n",
-    "                                    n_estimators= 115,\n",
-    "                                    random_state= 10) ),\n",
-    "              ('RF', RandomForestClassifier(criterion = 'gini',\n",
-    "                                    min_samples_leaf = 2,\n",
-    "                                    min_samples_split = 7,\n",
-    "                                    n_estimators = 100)),\n",
-    "              ('HGB', HistGradientBoostingClassifier(loss = 'auto',\n",
-    "                                                     max_leaf_nodes = 20, \n",
-    "                                                     min_samples_leaf = 7, \n",
-    "                                                     max_bins = 200))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 379,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.8823805367193378\n",
-      "Test: 0.8656078457450276\n"
-     ]
-    }
-   ],
-   "source": [
-    "sc = StackingClassifier(estimators = estimators)\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(sc,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 426,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.88230876925035\n",
-      "Test: 0.8688430698739978\n"
-     ]
-    }
-   ],
-   "source": [
-    "sc = StackingClassifier(estimators = estimators)\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(sc,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Voting Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 428,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.8861842942598956\n",
-      "Test: 0.8682130584192439\n"
-     ]
-    }
-   ],
-   "source": [
-    "vc = VotingClassifier(estimators = estimators)\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(vc,kf, X, Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 429,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 0.886916125747741\n",
-      "Test: 0.8692439862542957\n"
-     ]
-    }
-   ],
-   "source": [
-    "vc = VotingClassifier(estimators = estimators, voting='soft', weights=[2, 1, 2])\n",
-    "kf = StratifiedKFold(n_splits=10)\n",
-    "avg_score(vc,kf, X, Y)"
    ]
   },
   {
@@ -1663,85 +1392,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 509,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "86.987"
-      ]
-     },
-     "execution_count": 509,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Hist gradient boosting with nans, outliers removed, new parameters\n",
-    "\n",
-    "#  feature RFE, robust scaler, trained on cross validation\n",
-    "y_prediction = hgb_model.predict(X_test_GB)  \n",
-    "HistGradient_F1 = round(f1_score(y_true = y_test, y_pred = y_prediction, average='micro')*100, 3)\n",
-    "HistGradient_F1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 551,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "86.674"
-      ]
-     },
-     "execution_count": 551,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Hist gradient boosting with nans, outliers removed, new parameters\n",
-    "\n",
-    "#  feature RFE, robust scaler, trained on cross validation\n",
-    "y_prediction = hgb_model.predict(X_test_GB)  \n",
-    "HistGradient_F1 = round(f1_score(y_true = y_test, y_pred = y_prediction, average='micro')*100, 3)\n",
-    "HistGradient_F1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 554,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "86.674"
-      ]
-     },
-     "execution_count": 554,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Hist gradient boosting with nans, outliers removed, new parameters\n",
-    "\n",
-    "#  feature RFE, robust scaler, trained on cross validation\n",
-    "y_prediction = hgb_model.predict(X_test_GB)  \n",
-    "HistGradient_F1 = round(f1_score(y_true = y_test, y_pred = y_prediction, average='micro')*100, 3)\n",
-    "HistGradient_F1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing the parameters"
+    "# Tuning the parameters"
    ]
   },
   {
@@ -1849,27 +1503,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [],
@@ -1946,67 +1579,6 @@
    ],
    "source": [
     "metrics(y_test, y_prediction, y_test, y_pred_2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "RFE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 491,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # # Looking for the best number of feature considered by the RFE\n",
-    "\n",
-    "\n",
-    "# #no of features\n",
-    "# nof_list=np.arange(1,41)            \n",
-    "# high_score=0\n",
-    "# #Variable to store the optimum features\n",
-    "# nof=0           \n",
-    "# score_list =[]\n",
-    "# for n in range(len(nof_list)):\n",
-    "#     # we are going to see in the next class this \"train_test_split()\"...\n",
-    "#     X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size = 0.3, random_state = 0)\n",
-    "    \n",
-    "#     model = gb_model\n",
-    "#     rfe = RFE(model,nof_list[n])\n",
-    "#     X_train_rfe = rfe.fit_transform(X_train,y_train)\n",
-    "#     X_test_rfe = rfe.transform(X_test)\n",
-    "#     model.fit(X_train_rfe,y_train)\n",
-    "    \n",
-    "#     score = model.score(X_test_rfe,y_test)\n",
-    "#     score_list.append(score)\n",
-    "\n",
-    "#     if(score>high_score):\n",
-    "#         high_score = score\n",
-    "#         nof = nof_list[n]\n",
-    "# print(\"Optimum number of features: %d\" %nof)\n",
-    "# print(\"Score with %d features: %f\" % (nof, high_score))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 490,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # # Computing RFE with the best number of features found\n",
-    "\n",
-    "\n",
-    "# rfe = RFE(estimator = gb_model, n_features_to_select = 19)\n",
-    "\n",
-    "# X_rfe = rfe.fit_transform(X = X_train, y = y_train)\n",
-    "\n",
-    "# gb_model.fit(X = X_rfe,y = y_train)\n",
-    "\n",
-    "# selected_features = pd.Series(rfe.support_, index = X_train.columns)\n",
-    "# selected_features"
    ]
   },
   {
@@ -2203,60 +1775,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Missing values\n",
-    "# \n",
-    "# Defining the variables to change to nan (based on the ?)\n",
-    "Base_Area_to_replace = ['Base Area_Northbury','Base Area_Other']\n",
-    "Employment_Sector_to_replace = ['Employment Sector_Other','Employment Sector_Private Sector - Services ','Employment Sector_Public Sector - Others','Employment Sector_Self-Employed (Individual)']\n",
-    "Role_to_replace = ['Role_Administratives', 'Role_Agriculture and Fishing', 'Role_Army','Role_Cleaners & Handlers', 'Role_Household Services', 'Role_IT','Role_Machine Operators & Inspectors', 'Role_Management','Role_Other services', 'Role_Professor', 'Role_Repair & constructions','Role_Sales', 'Role_Security', 'Role_Transports']\n",
-    "\n",
-    "# Defining the nan values\n",
-    "newland.loc[newland['Base Area_?'] == 1.0, Base_Area_to_replace] = np.nan\n",
-    "newland.loc[newland['Employment Sector_?'] == 1.0, Employment_Sector_to_replace] = np.nan\n",
-    "newland.loc[newland['Role_?'] == 1.0, Role_to_replace] = np.nan\n",
-    "\n",
-    "# Dropping the variables with the question mark\n",
-    "newland.drop(columns=['Base Area_?','Employment Sector_?','Role_?'], inplace = True)\n",
-    "\n",
-    "# For the problem of the linearity, dropping 1 variable for each previous variable\n",
-    "# newland.drop(['Native Continent_Africa', 'Marital Status_Divorced', 'Lives with_Alone','Base Area_Other', 'Role_Administratives'], axis = 1, inplace = True)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Knn Imputer\n",
-    "\n",
-    "newland_knn = newland.copy()\n",
-    "imputer = KNNImputer(n_neighbors = 5, weights = 'uniform')\n",
-    "newland_knn = imputer.fit_transform(newland_knn)\n",
-    "newland_knn = pd.DataFrame(newland_knn, columns = newland.columns )\n",
-    "\n",
-    "\n",
-    "changing_values = ['Base Area_Northbury',\n",
-    "       'Employment Sector_Other',\n",
-    "       'Employment Sector_Private Sector - Services ',\n",
-    "       'Employment Sector_Public Sector - Others',\n",
-    "       'Employment Sector_Self-Employed (Individual)',\n",
-    "       'Role_Agriculture and Fishing', 'Role_Army', 'Role_Cleaners & Handlers',\n",
-    "       'Role_Household Services', 'Role_IT',\n",
-    "       'Role_Machine Operators & Inspectors', 'Role_Management',\n",
-    "       'Role_Other services', 'Role_Professor', 'Role_Repair & constructions',\n",
-    "       'Role_Sales', 'Role_Security', 'Role_Transports']\n",
-    "\n",
-    "\n",
-    "for variable in changing_values:\n",
-    "    newland_knn[variable] = np.round(newland_knn[variable])\n",
-    "\n",
-    "\n",
-    "\n",
-    "newland = newland_knn.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 462,
    "metadata": {},
    "outputs": [],
@@ -2280,7 +1798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature selection RFE\n",
+    "# Feature selection\n",
     "# \n",
     "feature_selection = ['Lives with_Wife / Husband',\n",
     " 'Money Received',\n",
@@ -2318,7 +1836,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_prediction = hgb_model.predict(X_test)  \n",
+    "y_prediction = gb_model.predict(X_test)  \n",
     "y_prediction = y_prediction.astype(int)\n",
     "X_test.index = X_test.index.astype(int)"
    ]
