Update ML Project Gradient boosting.ipynb

--- a/Notebooks/ML Project Gradient boosting.ipynb
+++ b/Notebooks/ML Project Gradient boosting.ipynb
@@ -28,12 +28,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Possibilities\n",
+    "Possibilities considered\n",
     "\n",
     "3 approaches for nan:\n",
     "- knn imputer\n",
-    "- drop\n",
-    "- mode\n",
+    "- dropping them\n",
+    "- fill with the mode\n",
     "\n",
     "2 approaches for outliers\n",
     "- leave them\n",
@@ -41,6 +41,7 @@
     "\n",
     "Models:\n",
     "- gradient boosting\n",
+    "- svm\n",
     "- random forest\n",
     "- stacking"
    ]
@@ -82,8 +83,10 @@
     "from sklearn.feature_selection import mutual_info_classif\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import KFold\n",
+    "import time\n",
     "\n",
-    "# Algorithms\n",
+    "# Models\n",
     "from sklearn import linear_model\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -114,14 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "import time\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import classification_report\n",
+    "# defining useful functions\n",
     "\n",
     "def avg_score(model):\n",
     "    # apply kfold\n",
@@ -269,8 +265,6 @@
     "def run_model(model,X,y):\n",
     "    model = model.fit(X,y)\n",
     "    return model\n",
-    "\n",
-    "\n",
     "\n",
     "def evaluate_model(X,y, model):\n",
     "    return model.score(X,y)\n",
@@ -732,7 +726,7 @@
     }
    ],
    "source": [
-    "# Graadient Boosting\n",
+    "# Gradient Boosting\n",
     "\n",
     "gb_model = GradientBoostingClassifier(ccp_alpha= 0,\n",
     "                                    criterion= 'friedman_mse',\n",
@@ -1812,15 +1806,6 @@
     " 'Gender',\n",
     " 'Employment Sector_Self-Employed (Individual)',\n",
     " 'Role_Other services']\n",
-    "\n",
-    "\n",
-    "# X_test = X_test[['Money Received', 'Age', 'Marital Status_Married', 'Years of Education',\n",
-    "#        'Lives with_Wife / Husband', 'Education Level',\n",
-    "#        'Working Hours per week', 'Ticket Price', 'Role_Management',\n",
-    "#        'Role_Professor', 'Gender',\n",
-    "#        'Employment Sector_Other',\n",
-    "#        'Employment Sector_Self-Employed (Individual)', 'Role_Other services', 'Role_Agriculture and Fishing', 'Role_IT','Role_Cleaners & Handlers']]\n",
-    "\n",
     "\n",
     "X_test = X_test[feature_selection]\n",
     "\n",
