--- a/Notebooks/ML Project Exploration.ipynb
+++ b/Notebooks/ML Project Exploration.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing the file into a pandas dataframe\n",
+    "# Importing the file \n",
     "newland = pd.read_excel('Train.xlsx')"
    ]
   },
